Fix spacing on Order Recieved page

--- a/src/assets/scss/templates/_checkout.scss
+++ b/src/assets/scss/templates/_checkout.scss
@@ -10,4 +10,10 @@
 
     }
 
+    .woocommerce-thankyou-order-received {
+
+        line-height: 1.5;
+
+    }
+
 }
